<resources>
    <string name="app_name">School CGPA Calculator</string>
    <string name="student_details">Student Details</string>
    <string name="full_name">Full name</string>
    <string name="name_of_institution">Name of Institution</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="spinnerDuration">Select Course Duration</string>
    <string name="university">University</string>
    <string name="polytechnic">Polytechnic</string>
    <string name="college_of_education">College of\n Education</string>
    <string name="student_record">Student\'s Record</string>
    <string name="title_activity_navigation_screen">NavigationScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed_screen">TabbedScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
